# quotify

./: .gitignore  FIXES_APPLIED.md  INSTALLATION.md  NEXT_STEPS.md  README.md  SETUP.md  SETUP_REAL.md  SETUP_RELEASE.md  diagnose_quotify.sh  extract_audio.py  fix_all_issues.sh  fix_icon.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-macos-build.sh
.github/workflows/: release.yml  simple-release.yml  test.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  yt-dlp-wrapper.sh
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  paths.rs
src/components/: ErrorBoundary.tsx  command-palette.tsx  player-column.tsx  quote-card.tsx  quotes-column.tsx  settings-dialog.tsx  source-card.tsx  sources-column.tsx  transcript-pane.tsx
src/hooks/: use-keyboard-shortcuts.ts
src/lib/: cleanTranscript.ts  googleDocs.ts  quoteUtils.ts  settings.ts  storage.ts  transcribe.ts  utils.ts  ytScraper.ts
src/test/: clean-transcript.test.ts  quote-utils.test.ts  setup.ts
src/types/: index.ts
tests/: basic.spec.ts
