[package]
name = "quotify"
version = "1.0.0"
description = "A desktop app for extracting perfectly cited quotes from YouTube interviews"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
which = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
